--- a/GlitcherCoreLib.csproj
+++ b/GlitcherCoreLib.csproj
@@ -13,14 +13,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Classes\Databases\General\" />
-	  <Folder Include="Classes\Databases\MySQL\" />
-	  <Folder Include="Classes\Databases\Clickhouse\" />
-	  <Folder Include="Classes\Databases\SQLite\" />
-	</ItemGroup>
-
-	<ItemGroup>
+	  <PackageReference Include="ClickHouse.Client" Version="7.8.2" />
 	  <PackageReference Include="MQTTnet" Version="4.3.7.1207" />
+	  <PackageReference Include="System.Data.SQLite" Version="1.0.119" />
 	</ItemGroup>
 
 </Project>
