--- a/GlitcherCoreLib.csproj
+++ b/GlitcherCoreLib.csproj
@@ -13,6 +13,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Beckhoff.TwinCAT.Ads" Version="6.1.294" />
+	  <PackageReference Include="Beckhoff.TwinCAT.Ads.TcpRouter" Version="6.1.294" />
 	  <PackageReference Include="ClickHouse.Client" Version="7.8.2" />
 	  <PackageReference Include="MQTTnet" Version="4.3.7.1207" />
 	  <PackageReference Include="MySql.Data" Version="9.1.0" />
